--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -31,7 +31,6 @@ To provide specific installation instructions, please select your operating syst
   <option value="debian10">Debian 10 (Buster)</option>
   <option value="rhel7">Red Hat Enterprise Linux 7</option>
   <option value="rhel8">Red Hat Enterprise Linux 8</option>
-  <option value="ubuntu1804">Ubuntu 18.04 (Bionic)</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
 
@@ -150,29 +149,6 @@ wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
 {% endhighlight %}
 </div>
 
-<div class="quickstart_os quickstart_os_ubuntu1804">
-  <p>
-    Using Puppet 6.x is recommended, which is available from the Puppet Labs repository.
-
-    To use Puppet 6.x with Puppet Agent and Puppet server:
-  </p>
-
-{% highlight bash %}
-sudo apt-get -y install ca-certificates
-cd /tmp && wget https://apt.puppet.com/puppet6-release-bionic.deb
-sudo dpkg -i /tmp/puppet6-release-bionic.deb
-{% endhighlight %}
-
-  <p>Enable the Foreman repo:</p>
-
-{% highlight bash %}
-echo "deb http://deb.theforeman.org/ bionic {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
-echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
-sudo apt-get -y install ca-certificates
-wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
-{% endhighlight %}
-</div>
-
 <div class="quickstart_os quickstart_os_ubuntu2004">
   <p>
     Using Puppet 6.x is recommended, which is available from the Puppet Labs repository.
@@ -208,7 +184,7 @@ sudo yum -y install foreman-installer
 {% endhighlight %}
 </div>
 
-<div class="quickstart_os quickstart_os_debian10 quickstart_os_ubuntu1804 quickstart_os_ubuntu2004">
+<div class="quickstart_os quickstart_os_debian10 quickstart_os_ubuntu2004">
 {% highlight bash %}
 sudo apt-get update && sudo apt-get -y install foreman-installer
 {% endhighlight %}
@@ -216,13 +192,13 @@ sudo apt-get update && sudo apt-get -y install foreman-installer
 
 #### Running the installer
 
-<div class="quickstart_os quickstart_os_debian10 quickstart_os_ubuntu1804 quickstart_os_ubuntu2004 alert alert-info">
+<div class="quickstart_os quickstart_os_debian10 quickstart_os_ubuntu2004 alert alert-info">
   Ensure that <code>ping $(hostname -f)</code> shows the real IP address, not 127.0.1.1.  Change or remove this entry from /etc/hosts if present.
 </div>
 
 The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:
 
-<div class="quickstart_os quickstart_os_none quickstart_os_el7 quickstart_os_rhel7 quickstart_os_debian10 quickstart_os_ubuntu1804 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_rhel8">
+<div class="quickstart_os quickstart_os_none quickstart_os_el7 quickstart_os_rhel7 quickstart_os_debian10 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_rhel8">
 {% highlight bash %}
 sudo foreman-installer
 {% endhighlight %}
