--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -58,23 +58,21 @@ sudo yum-config-manager --enable rhel-7-server-optional-rpms rhel-server-rhscl-7
   </p>
 
   <p>
-    Using a recent version of Puppet is recommended, which is available from the Puppet Labs repository.
-    To use Puppet 6.x with Puppet Agent and Puppet server:
+    Enable Puppet's 7.x repository:
   </p>
 
 {% highlight bash %}
-sudo yum -y install https://yum.puppet.com/puppet6-release-el-7.noarch.rpm
+sudo yum -y install https://yum.puppet.com/puppet7-release-el-7.noarch.rpm
 {% endhighlight %}
 </div>
 
 <div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
   <p>
-    Using a recent version of Puppet is recommended, which is available from the Puppet Labs repository.
-    To use Puppet 6.x with Puppet Agent and Puppet server:
+    Enable Puppet's 7.x repository:
   </p>
 
 {% highlight bash %}
-sudo yum -y install https://yum.puppet.com/puppet6-release-el-8.noarch.rpm
+sudo yum -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
 {% endhighlight %}
 </div>
 
@@ -128,15 +126,13 @@ sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86
 
 <div class="quickstart_os quickstart_os_debian10">
   <p>
-    Using Puppet 6.x is recommended, which is available from the Puppet Labs repository.
-
-    To use Puppet 6.x with Puppet Agent and Puppet server:
+    Enable Puppet's 7.x repository:
   </p>
 
 {% highlight bash %}
 sudo apt-get -y install ca-certificates
-cd /tmp && wget https://apt.puppet.com/puppet6-release-buster.deb
-sudo dpkg -i /tmp/puppet6-release-buster.deb
+cd /tmp && wget https://apt.puppet.com/puppet7-release-buster.deb
+sudo dpkg -i /tmp/puppet7-release-buster.deb
 {% endhighlight %}
 
   <p>Enable the Foreman repo:</p>
@@ -151,15 +147,13 @@ wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
 
 <div class="quickstart_os quickstart_os_ubuntu2004">
   <p>
-    Using Puppet 6.x is recommended, which is available from the Puppet Labs repository.
-
-    To use Puppet 6.x with Puppet Agent and Puppet server:
+    Enable Puppet's 7.x repository:
   </p>
 
 {% highlight bash %}
 sudo apt-get -y install ca-certificates
-cd /tmp && wget https://apt.puppet.com/puppet6-release-focal.deb
-sudo dpkg -i /tmp/puppet6-release-focal.deb
+cd /tmp && wget https://apt.puppet.com/puppet7-release-focal.deb
+sudo dpkg -i /tmp/puppet7-release-focal.deb
 {% endhighlight %}
 
   <p>Enable the Foreman repo:</p>
