Avoid using apt-key in quickstart
In 19d2eb0d0c1b1451128d568f75d04a498d53a9fb the long installation
instructions were updated, but the quickstart was missed. This aligns
them.

Fixes: 19d2eb0d0c1b1451128d568f75d04a498d53a9fb

--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -138,10 +138,9 @@ sudo dpkg -i /tmp/puppet7-release-buster.deb
   <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
+sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
 echo "deb http://deb.theforeman.org/ buster {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
 echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
-sudo apt-get -y install ca-certificates gpg
-wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
 {% endhighlight %}
 </div>
 
@@ -159,10 +158,9 @@ sudo dpkg -i /tmp/puppet7-release-focal.deb
   <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
+sudo wget https://deb.theforeman.org/foreman.asc -O /etc/apt/trusted.gpg.d/foreman.asc
 echo "deb http://deb.theforeman.org/ focal {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
 echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
-sudo apt-get -y install ca-certificates
-wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
 {% endhighlight %}
 </div>
 
