Add Debian 11 support to the manual

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -4,6 +4,10 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Foreman on Debian 11 (Bullseye)
+
+It is now possible to run Foreman on Debian 11. Users are encouraged to upgrade.
+
 ### Upgrade warnings
 
 #### `require_ssl_smart_proxies` setting dropped
@@ -22,6 +26,12 @@ For fresh installations, EL8 should considered the preferred target.
 Existing installations should start thinking about a migration plan.
 
 Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
+
+#### Running Foreman on Debian 10
+
+Now that Debian 11 is supported, Debian 10 support is deprecated and will be dropped with Foreman 3.4
+
+Note that this is only support to run Foreman and Foreman Proxy themselves on Debian 10. Managing Debia 10 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
 ### Release Notes
 
