--- a/_includes/manuals/nightly/3.1.1_supported_platforms.md
+++ b/_includes/manuals/nightly/3.1.1_supported_platforms.md
@@ -23,6 +23,8 @@ The following operating systems are supported by the installer, have packages an
   * Architectures: amd64
 * Debian 10 (Buster)
   * Architectures: amd64
+* Debian 11 (Bullseye)
+  * Architectures: amd64
 
 PostgreSQL version 10 or newer. For EL 7 this is available from Software Collections.
 
