Write repositories instead of repo

--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -135,7 +135,7 @@ cd /tmp && wget https://apt.puppet.com/puppet7-release-buster.deb
 sudo dpkg -i /tmp/puppet7-release-buster.deb
 {% endhighlight %}
 
-  <p>Enable the Foreman repo:</p>
+  <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
 echo "deb http://deb.theforeman.org/ buster {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
@@ -156,7 +156,7 @@ cd /tmp && wget https://apt.puppet.com/puppet7-release-focal.deb
 sudo dpkg -i /tmp/puppet7-release-focal.deb
 {% endhighlight %}
 
-  <p>Enable the Foreman repo:</p>
+  <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
 echo "deb http://deb.theforeman.org/ focal {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
