Use apt-get instead of dpkg -i
Apt is able to install packages and dpkg should be considered an
internal tool.

--- a/_includes/manuals/nightly/2.1_quickstart_installation.md
+++ b/_includes/manuals/nightly/2.1_quickstart_installation.md
@@ -132,7 +132,7 @@ sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86
 {% highlight bash %}
 sudo apt-get -y install ca-certificates
 cd /tmp && wget https://apt.puppet.com/puppet7-release-buster.deb
-sudo dpkg -i /tmp/puppet7-release-buster.deb
+sudo apt-get install /tmp/puppet7-release-buster.deb
 {% endhighlight %}
 
   <p>Enable the Foreman repositories:</p>
@@ -152,7 +152,7 @@ echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /et
 {% highlight bash %}
 sudo apt-get -y install ca-certificates
 cd /tmp && wget https://apt.puppet.com/puppet7-release-focal.deb
-sudo dpkg -i /tmp/puppet7-release-focal.deb
+sudo apt-get install /tmp/puppet7-release-focal.deb
 {% endhighlight %}
 
   <p>Enable the Foreman repositories:</p>
