--- a/_includes/manuals/nightly/3.1.1_supported_platforms.md
+++ b/_includes/manuals/nightly/3.1.1_supported_platforms.md
@@ -19,7 +19,7 @@ The following operating systems are supported by the installer, have packages an
 * CentOS 8 Stream
   * Architectures: x86_64 only
   * **Note:** The RPM packages are built on CentOS Linux 8, but tested to work also on CentOS 8 Stream
-* Ubuntu 20.04 (Bionic)
+* Ubuntu 20.04 (Focal)
   * Architectures: amd64
 * Debian 10 (Buster)
   * Architectures: amd64
