--- a/_includes/manuals/3.0/1.2_release_notes.md
+++ b/_includes/manuals/3.0/1.2_release_notes.md
@@ -49,6 +49,44 @@ Existing installations should start thinking about a migration plan.
 
 Note that this is only support to run Foreman and Foreman Proxy themselves on EL7. Managing EL7 systems remains supported. See [the RFC](https://community.theforeman.org/t/deprecation-plans-for-foreman-on-el7-debian-10-and-ubuntu-18-04/25008) for more information.
 
+### Release notes for 3.0.2
+#### Foreman - API
+* Undefined method error when calling Api::V2::SmartProxiesController#import_puppetclasses ([#33539](https://projects.theforeman.org/issues/33539))
+
+#### Foreman - Host creation
+* Template is written twice when resolving provisioning templates for a host ([#33793](https://projects.theforeman.org/issues/33793))
+
+#### Foreman - Host registration
+* Fix name & path to OS host_init_config template ([#33979](https://projects.theforeman.org/issues/33979))
+
+#### Foreman - JavaScript stack
+* Toast type in errorToast is incorrect ([#33514](https://projects.theforeman.org/issues/33514))
+
+#### Foreman - Packaging
+* Pin psych &lt; 4 ([#34212](https://projects.theforeman.org/issues/34212))
+
+#### Foreman - Plugin integration
+* Enable Salt Autosign via Grains for Provisioning Template ([#32919](https://projects.theforeman.org/issues/32919))
+
+#### Foreman - Settings
+* Foreman wont start with old settings in DB ([#33861](https://projects.theforeman.org/issues/33861))
+
+#### Foreman - Templates
+* Add support for all RHEL derivatives in Content Host Registration ([#33408](https://projects.theforeman.org/issues/33408))
+* Add eject cdrom snippet and call it from preseed finish script ([#31454](https://projects.theforeman.org/issues/31454))
+
+#### Foreman - Web Interface
+* After creating new host group from help page, page doesn't redirect to main landing page. ([#33637](https://projects.theforeman.org/issues/33637))
+* Host Detail Graphs VERY slow to load after upgrade to 3.0.0-rc1 ([#33310](https://projects.theforeman.org/issues/33310))
+
+#### Installer - Foreman modules
+* Foreman Proxy Templates feature only listens to https by default ([#33808](https://projects.theforeman.org/issues/33808))
+
+#### Packaging - RPMs
+* foreman.rpm pulls in nodejs ([#34507](https://projects.theforeman.org/issues/34507))
+
+*A full list of changes in 3.0.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12][]=1518)*
+
 ### Release notes for 3.0.1
 #### Foreman
 * app/models/concerns/orchestration/compute.rb:93 rescue ends up with error (ArgumentError): too few arguments \- [#32273](https://projects.theforeman.org/issues/32273)
